Refactor all tests of each card: did them not random